Handle database warnings and problems
