# docs/api/swagger.yaml
@@ -360,6 +360,68 @@ paths:
                 501:
                     description: Operation is not supported (e.g. not running as Phar).
 
+    /api/server/database:
+        get:
+            summary: Gets the current database status
+            tags: [Server Configuration]
+            responses:
+                200:
+                    description: The database status
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ServerDatabase'
+                501:
+                    description: Contao console does not support the necessary contao:migrate commands or CLI API features.
+                    content:
+                        application/problem+json:
+                            schema:
+                                $ref: '#/components/schemas/ApiProblem'
+                503:
+                    description: If the PHP command line binary cannot be found.
+                    content:
+                        application/problem+json:
+                            schema:
+                                $ref: '#/components/schemas/ApiProblem'
+
+        post:
+            summary: Configures the database URL.
+            tags: [Server Configuration]
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                url:
+                                    type: string
+                                    description: Database URL to be stored in the .env file.
+            responses:
+                200:
+                    description: The database status
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ServerDatabase'
+                400:
+                    description: If the given URL does not match the regular expression.
+                    content:
+                        application/problem+json:
+                            schema:
+                                $ref: '#/components/schemas/ApiProblem'
+                501:
+                    description: Contao console does not support the necessary contao:migrate commands or CLI API features.
+                    content:
+                        application/problem+json:
+                            schema:
+                                $ref: '#/components/schemas/ApiProblem'
+                503:
+                    description: If the PHP command line binary cannot be found.
+                    content:
+                        application/problem+json:
+                            schema:
+                                $ref: '#/components/schemas/ApiProblem'
+
     /api/server/admin-user:
         get:
             summary: Gets if there is an admin user
@@ -1325,6 +1387,37 @@ components:
                         enum:
                             - /
                             - \
+
+        ServerDatabase:
+            type: object
+            properties:
+                url:
+                    type: string
+                    description: Current database URL (DATABASE_URL from .env file in project root).
+                pattern:
+                    type: string
+                    description: Regular expression to match a valid database URL.
+                status:
+                    type: object
+                    properties:
+                        type:
+                            type: string
+                            enum:
+                                - error
+                                - problem
+                                - migration
+                                - schema
+                                - empty
+                        total:
+                            type: number
+                            description: Number of errors/problems/migrations or schema updates (according to type).
+                        message:
+                            type: string
+                            required: false
+                            description: Contains the console output if the command fails or the first error/problem message.
+                        warnings:
+                            type: number
+                            description: Number of warnings generated by the contao:migrate command.
 
         ServerAdminUser:
             type: object
